--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/lemonstand.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start</span><br>
-                        <span class="skills">Marketing - Web Development - Graphic Design - User Experience</span><br><br>
+                        <span class="skills">Marketing & Social Media- Web Development - Graphic Design - UI & UX</span><br><br>
                         <hr class="star-light bg"> <!-- Add bg -->
                     </div>
                 </div>
@@ -260,7 +259,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Silicon Valley<br>CALIFORNIA</p>
+                        <p>Silicon Valley<br>California</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>LemonStand.io around the Web</h3>
@@ -276,6 +275,15 @@
                             </li>
                             <li>
                                 <a href="http://linkedin.com" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://pinterest.com" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-pinterest"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://instagram.com" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://wordpress.com" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-wordpress"></i></a>
                             </li>
                         </ul>
                     </div>
